--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "grunt-shell": "*",
     "handlebars-runtime": "~1.0.12",
     "hbsfy": "~0.1.5",
-    "grunt-contrib-jshint": "~0.7.1"
+    "grunt-contrib-jshint": "~0.7.1",
+    "events": "~0.5.0",
+    "extend": "~1.2.1"
   }
 }
