--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hbsfy": "~0.1.5",
     "grunt-contrib-jshint": "~0.7.1",
     "events": "~0.5.0",
-    "extend": "~1.2.1"
+    "extend": "~1.2.1",
+    "sizzle": "~1.1.0"
   }
 }
