--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "domready": "~0.2.13",
     "domify": "~1.0.0",
     "underscore": "~1.5.2",
-    "mustache": "~0.7.2",
     "dom-delegate": "~0.3.2",
     "dope": "~2.2.1",
-    "location-bar": "~1.0.0"
+    "location-bar": "~1.0.0",
+    "keycode": "~0.3.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -23,11 +23,13 @@
     "grunt-browserify": "~1.2.1",
     "grunt-contrib-watch": "~0.5.1",
     "grunt-shell": "*",
-    "handlebars-runtime": "~1.0.12",
-    "hbsfy": "~0.1.5",
     "grunt-contrib-jshint": "~0.7.1",
     "events": "~0.5.0",
     "extend": "~1.2.1",
-    "sizzle": "~1.1.0"
+    "sizzle": "~1.1.0",
+    "handlebars": "~1.0.12",
+    "hbsfy": "~1.0.0",
+    "handlebars-helpers": "~0.3.17",
+    "mustache": "~0.7.3"
   }
 }
